Few small updates

--- a/words/about.html
+++ b/words/about.html
@@ -32,6 +32,6 @@ only use that for golfing. :-)</p>
 Platform. Yes, <em>I know</em> it’s overkill for a Jekyll based blog and a couple of other odds and ends, but it lets me
 experiment with stuff on Kubernetes easily.</p>
 </main>
-    <footer>Test</footer>
+    <footer></footer>
   </body>
 </html>
