--- a/words/about.html
+++ b/words/about.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="/words/assets/css/main.css"/>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <meta property="og:title" content="PigeonWeb">
+    <meta property="og:description" content="Fourteen pigeons in a box, arguing over the TV remote">
+    <meta property="og:image" content="https://live.staticflickr.com/4023/4297308309_35344b49b4_b.jpg">
+    <meta property="og:url" content="http://www.garethrogers.net/words/about.html">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
     <header>
