--- a/words/about.html
+++ b/words/about.html
@@ -16,6 +16,8 @@
     <meta property="og:image" content="https://live.staticflickr.com/4023/4297308309_35344b49b4_b.jpg">
     <meta property="og:url" content="http://www.garethrogers.net/words/about.html">
     <meta name="twitter:card" content="summary_large_image">
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101289594);</script>
+    <script async src="//static.getclicky.com/js"></script>
   </head>
   <body>
     <header>
