--- a/cv/index.html
+++ b/cv/index.html
@@ -62,7 +62,7 @@ header p {
     <section>
         <h2>Personal profile</h2>
         <p>
-            As a web application developer with over 10 years of commercial experience, I have been involved in the
+            As a web application developer with over 12 years of commercial experience, I have been involved in the
             design, implementation, and maintenance of many web applications. I am a skilled problem-solver, and am 
             used to working to meet exacting deadlines. While the bulk of my work has been with PHP, I have made use of
             other languages, such as Perl and Scala, to accomplish specific tasks, and I am always willing to learn new
@@ -72,7 +72,7 @@ header p {
     <section>
         <h2>Key Skills</h2>
         <ul class="twocols">
-            <li>PHP 5 - 7
+            <li>PHP 5 - 8
             <li>JavaScript
             <li>Phalcon framework
             <li>jQuery
@@ -94,7 +94,30 @@ header p {
     <section>
         <h2>Employment history</h2>
         <article>
-            <h3>Systems Development Manager, Staveley Head Limited (September 2016 &ndash; present)</h3>
+            <h3>Head of Software Development, Insurd Limited (February 2022 &ndash; present)</h3>
+            <p>Responsibilities include:</p>
+            <ul>
+                <li>Provisioning and maintaining cloud resources to run the company's software systems
+                <li>Design and implement web applications to achieve the company's aims which included:
+                    <ul>
+                        <li>Managing insurance quote request details from retail clients
+                        <li>Integrate quote requests from insurance aggregator sites such as GoCompare and Compare The Market
+                        <li>Providing system calculated insurance quotations for various products based on given specifications
+                        <li>Manage some areas of content on the company's website
+                    </ul>
+            </ul>
+        </article>
+        <article>
+            <h3>Web Developer, Premium Choice Limited (December 2020 &ndash; December 2021)</h3>
+            <p>Worked remotely to develop a new web application for one of the company's new products launched in 2021. Main tasks were:</p>
+            <ul>
+                <li>Implemented a new quote journey using a React front-end backed by a PHP API
+                <li>Introduced a CI build process using Jenkins, Docker and SonarQube to build containerised
+                    applications for deployment to the company's Azure infrastructure
+            </ul>
+        </article>
+        <article>
+            <h3>Systems Development Manager, Staveley Head Limited (September 2016 &ndash; November 2020)</h3>
             <p>Responsibilities as for 2010-2016, and also:</p>
             <ul>
                 <li>Lead a team of four developers, dividing the team's workload appropriately
