--- a/cv/index.html
+++ b/cv/index.html
@@ -193,7 +193,7 @@ header p {
         <h2>Hobbies and interests</h2>
         <p>
             I am currently studying some maths modules with the Open University with a view to getting a maths degree.
-            I play the cornet and am the musical director of a local youth band.
+            I play the cornet for a local youth band between COVID-19 waves.
         </p>
     </section>
 </body>
