Add Mastodon link for ... reasons

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Gareth Rogers</h1>
     <!-- What were you hoping to find here? -->
+    <a rel="me" href="https://nonsense.garethrogers.net/@gareth">Mastodon</a>
 </body>
 </html>
