--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Gareth Rogers</h1>
     <!-- What were you hoping to find here? -->
     <a rel="me" href="https://nonsense.garethrogers.net/@gareth">Mastodon</a>
+    <a rel="me" href="https://nonsense.garethrogers.net/@admin">Mastodon</a>
 </body>
 </html>
