Update CV with new degree qualification

--- a/cv/index.html
+++ b/cv/index.html
@@ -62,7 +62,7 @@ header p {
     <section>
         <h2>Personal profile</h2>
         <p>
-            As a web application developer with over 12 years of commercial experience, I have been involved in the
+            As a web application developer with over 15 years of commercial experience, I have been involved in the
             design, implementation, and maintenance of many web applications. I am a skilled problem-solver, and am 
             used to working to meet exacting deadlines. While the bulk of my work has been with PHP, I have made use of
             other languages, such as Perl and Scala, to accomplish specific tasks, and I am always willing to learn new
@@ -103,7 +103,6 @@ header p {
                         <li>Managing insurance quote request details from retail clients
                         <li>Integrate quote requests from insurance aggregator sites such as GoCompare and Compare The Market
                         <li>Providing system calculated insurance quotations for various products based on given specifications
-                        <li>Manage some areas of content on the company's website
                     </ul>
             </ul>
         </article>
@@ -169,7 +168,15 @@ header p {
     <section>
         <h2>Education</h2>
         <article>
-            <h3>BSc (Hons) 2:1, Open, The Open University (February 2002 &ndash; October 2008)</h3>
+            <h3>BSc (Hons) Mathematics, 1st, The Open University (February 2018 &ndash; July 2024)</h3>
+            <p>Relevant modules:</p>
+            <ul>
+                <li>Computational applied mathematics (MST374)
+                <li>Graphs, networks and design (MT365)
+            </ul>
+        </article>
+        <article>
+            <h3>BSc (Hons) Open, 2:1, The Open University (February 2002 &ndash; October 2008)</h3>
             <p>Relevant modules:</p>
             <ul>
                 <li>Fundamentals of interaction design (M364)
