--- a/cv/index.html
+++ b/cv/index.html
@@ -49,11 +49,11 @@ header p {
 </head>
 <body>
     <header>
-        <h1>Gareth Rogers</h1>
+        <h1>Angharad Rogers</h1>
         <address>
             <p>Bryn Lleweni, 47 Rhyl Road, Denbigh, Denbighshire, LL16 3DY</p>
             <p>
-                <strong>Email</strong>: <a href="mailto:gareth@garethrogers.net">gareth@garethrogers.net</a>
+                <strong>Email</strong>: <a href="mailto:angharad@angharad.tech">angharad@angharad.tech</a>
                 |
                 <strong>Telephone</strong>: <a href="tel:07947280007">07947 280007</a>
             </p>
@@ -195,13 +195,6 @@ header p {
                 <li>5 GCSEs grade A-C including Maths, Science and English
             </ul>
         </article>
-    </section>
-    <section>
-        <h2>Hobbies and interests</h2>
-        <p>
-            I am currently studying some maths modules with the Open University with a view to getting a maths degree.
-            I play the cornet for a local youth band between COVID-19 waves.
-        </p>
     </section>
 </body>
 </html>
